@@ -1,5 +1,6 @@
 #HomeSpawnPlus German Locale
 #v1.3.1
+#German Translation: Jobsti (Dachboden-Server)
 CMD_HOME_NO_OTHERWORLD_PERMISSION=%red%Keine Rechte um in Homes anderer Welten zu gehen.
 CMD_HOME_NO_HOME_ON_WORLD=Keine Homes in Welt %world% gefunden.
 CMD_HOME_NO_NAMED_HOME_PERMISSION=%red%Keine Rechte um in benannte Homes zu gehen.
@@ -18,8 +19,6 @@ WARMUP_CANCELLED_YOU_MOVED=Du hast dich bewegt! Warmup %name% abgebrochen.
 WARMUP_STARTED=Warmup %name% gestartet, du musst noch %seconds% Sekunden warten.
 WARMUP_ALREADY_PENDING=Dein Warmup für %name% läuft bereits.
 
-COOLDOWN_IN_EFFECT=Dein %name%-Cooldown läuft noch. Bitte warte noch %seconds% Sekunden.
-
 COST_CHARGED=%price% eingezahlt um %command% zu nutzen.
 COST_ERROR=Fehler beim Abziehen von %price% deines Kontos: %errorMessage%
 COST_INSUFFICIENT_FUNDS=Zu wenig Kapital, du benötigste mindestens %price% (du hast derweil %balance%)
@@ -28,7 +27,7 @@ NO_PERMISSION=%red%Du hast keine Rechte um dies zu nutzen %default_color%(HSP)
 
 CMD_SPAWN_NO_SPAWN_FOUND=Spawn %name% nicht gefunden.
 
-CM_GROUPSPAWN_NO_GROUPSPAWN_FOR_GROUP=Kein GroupSpawn für %group% gefunden.
+CMD_GROUPSPAWN_NO_GROUPSPAWN_FOR_GROUP=Kein GroupSpawn für %group% gefunden.
 
 CMD_HOMEDELETE_ERROR_DELETING_OTHER_HOME=%red%FEHLER: %default_color%Löchen der Homes anderer Spieler nicht gestattet.
 CMD_HOMEDELETE_HOME_DELETED=Home %name% gelöscht.
@@ -86,8 +85,61 @@ GENERIC_WORLD_DEFAULT=Standard-Welt
 
 HOME_BED_SET=Dein Home wurde an diesen Ort gesetzt.
 HOME_BED_ONE_MORE_CLICK=Klicke in den nächsten 5 Sek. nochmals auf dein Bett um dein Home permanent zu diesem Ort zu wechseln.
-#v1.3.1
+
+#_____________________________________________
+#Stuff from Updates below:
+#_____________________________________________
+#v1.3.1 -> 1.6
 #German Translation: Jobsti (Dachboden-Server)
+
+GENERIC_ERROR=%red%Ein System-Fehler wurde festgestellt, bitte verständige einen Admin.
+NO_HOME_INVITE_FOUND=Keine Home-Einladung gefunden..
+PLAYER_NOT_FOUND=Kein Spieler namens "%player%" gefunden.
+
+CMD_SETMAPSPAWN_SET_SUCCESS=Map-Spawn %world% wurde erfolgreiche zu %location% geändert.
+CMD_HOME_INVITE_INVITE_SENT=Du hast an Spieler %player% in dein Home %home% eingeladen.
+CMD_HOME_INVITE_TEMP_INVITE_SENT=Du hast an Spieler %player% in dein Home %home% eingeladen. (Restzeit %time% Sekunden).
+CMD_HOME_INVITE_EXPIRE_TIME_SET=Restzeit der Einladung geändert auf: %expire%
+CMD_HOME_INVITE_BAD_TIME=Ungültiges Zeitformat "%badTime%". Versuche z.B. \"1d 4h\" oder \"forever\"
+CMD_HOME_INVITE_HOME_NOT_FOUND=kein Home namens "%home%" gefunden. Tippe /homelist um deine Homes zu sehen.
+CMD_HOME_INVITE_INVITE_RECEIVED=%player% hat dir eine Einladung zu seinem Home gesendet. Tippe /hil um deine Einladungen zu sehen.
+CMD_HOME_INVITE_NOT_ALLOWED=Du hast keine Berechtigung Einladungen für Home %home% zu versenden.
+CMD_HIACCEPT_NO_INVITE=Du hast derweil keine Einladungen zum Akzeptieren.
+CMD_HIACCEPT_TELEPORTED=Du wurdest zu %player%'s Home %home% Teleportiert. 
+CMD_HOME_INVITE_NO_HOME_SPECIFIED=Du hast keinen Home-Namen vergeben und ein Standard-Home konnte nicht gefunden werden.
+TEMP_HOMEINVITE_RECEIVED=%who% hat dich in sein Home (%home%) eingeladen, du hast %time% Sek. um mit /hiaccept zu akzeptieren.
+
+COOLDOWN_IN_EFFECT=Dein %name%-Cooldown läuft noch. Bitte warte noch %seconds% Sekunden.
+
+CMD_PERM_CHECK_TRUE=Spieler %yellow%%player% %red%hat%default_color% Recht %yellow%%permission%%default_color% in Welt %yellow%%world%%default_color% (Perm System in Gebrauch = %system%).
+CMD_PERM_CHECK_FALSE=Spieler %yellow%%player% %red%hat KEIN %default_color% recht %yellow%%permission%%default_color% in Welt %yellow%%world%%default_color% (Perm System in Gebrauch = %system%).
+
+# Zeiteinheiten, falls dem user Zeit-bezogene Nachrichten angezeigt werden müssen.
+month=Monat
+months=Monate
+week=Woche
+weeks=Wochen
+day=Tag
+days=Tage
+hour=Stunde
+hours=Stunden
+minute=Minute
+minutes=Minuten
+second=Sekunde
+seconds=Sekunden
+
+# Zeitkürzel, heißt: "1m 2w 3t 4std 2min 30s": INFO: Dies wird auch beim
+# Zeit-Parsing genutzt! Der User kann "2 Stunden 30 min." schreiben, dies funktioniert
+# da "Stunden" sich mit "ytd" abgleicht und "Minunten" sich mit dem Kürzel
+# "min" abgleicht. Dies sollte auch mit anderen Sprachen funktionieren, wenn nicht
+# so teilt es bitte dem Author (andune) mit.
+MONTH_SHORTHAND=m
+WEEK_SHORTHAND=w
+DAY_SHORTHAND=t
+HOUR_SHORTHAND=std
+MINUTE_SHORTHAND=min
+SECOND_SHORTHAND=s
+
 #Wichtig: Format = UTF-8-ohne BOM
 #_____________________________________________
 #Stuff from Updates below:
